fix project card styling on mobile

--- a/styles.css
+++ b/styles.css
@@ -24,8 +24,12 @@ body, .card {
   }
   .card {
     border: none;
+    
   }
-  
+  .project {
+    max-width: 80%;
+    margin: auto;
+  }
   .card-img {
     border-radius: 0;
   }
@@ -45,6 +49,11 @@ body, .card {
   .vgr-cards .card:nth-child(even) .card-body {
     padding-left: 0;
     padding-right: 1.25rem;
+  }
+  @media (max-width: 820px) {
+    .project {
+      max-width: 100%;
+    }
   }
   @media (max-width: 576px) {
     .vgr-cards .card {
